<resources>
    <plurals name="clipboard_info_items_to_copy">
        <item quantity="one">%1$d item to copy</item>
        <item quantity="other">%1$d items to copy</item>
    </plurals>
    <plurals name="clipboard_info_items_to_move">
        <item quantity="one">%1$d item to move</item>
        <item quantity="other">%1$d items to move</item>
    </plurals>
    <string name="application_name">UTermux</string>
    <string name="shared_user_label">Termux user</string>
    <string name="new_session">创建会话窗口</string>
    <string name="new_session_failsafe">失效[创建会话窗口失败]</string>
    <string name="toggle_soft_keyboard">键盘</string>
    <string name="reset_terminal">重置</string>
    <string name="style_terminal">样式(主题)</string>
    <string name="share_transcript_title">Terminal transcript</string>
    <string name="help">帮助</string>
    <string name="toggle_keep_screen_on">保持唤醒</string>
    <string name="bootstrap_installer_body">正在安装...[群 714730084]</string>
    <string name="bootstrap_error_title">无法安装</string>
    <string name="bootstrap_error_body">Termux无法安装引导程序包。\n推荐使用离线安装\n1.离线包下载地址:请点击离线包地址\n2.下载的离线包请放置到:内部存储/xinhao/online_system/\n\n\n请检查您的网络连接，然后重试 \n说白了就是没有挂V-P-N，需要挂载V-P-N</string>
    <string name="bootstrap_error_abort">离线安装地址</string>
    <string name="bootstrap_error_try_again">重试在线下载</string>
    <string name="x11_sdl_delay" translatable="false">15</string>
    <string name="bootstrap_error_not_primary_user_message">Termux只能安装在主用户帐户上</string>
    <string name="max_terminals_reached_title">Max terminals reached</string>
    <string name="max_terminals_reached_message">Close down existing ones before creating new.</string>
    <string name="reset_toast_notification">终端已被复位</string>
    <string name="select_url">Termux 开发者面板</string>
    <string name="select_url_dialog_title">Click URL to copy or long press to open</string>
    <string name="select_all_and_share">分享记录</string>
    <string name="select_url_no_found">No URL found in the terminal.</string>
    <string name="select_url_copied_to_clipboard">URL copied to clipboard</string>
    <string name="share_transcript_chooser_title">分享记录到:</string>
    <string name="kill_process">杀掉本窗口进程 (%d)</string>
    <string name="confirm_kill_process">Really kill this session?</string>
    <string name="session_rename_title">Set session name</string>
    <string name="session_rename_positive_button">Set</string>
    <string name="session_new_named_title">New named session</string>
    <string name="session_new_named_positive_button">Create</string>
    <string name="styling_not_installed">美化主题,在侧边栏，是否打开?</string>
    <string name="share_file_chooser_title">Share with</string>
    <string name="permission_description">Termux:API needs the following permission(s):\n</string>
    <string name="styling_install">打开</string>
    <string name="notification_action_exit">Exit</string>
    <string name="notification_action_wake_lock">Acquire wakelock</string>
    <string name="notification_action_wake_unlock">Release wakelock</string>
    <string name="file_received_title">Save file in ~/downloads/</string>
    <string name="file_received_edit_button">Edit</string>
    <string name="file_received_open_folder_button">Open folder</string>
    <string name="app_name">AndroidFileManage</string>
    <string name="size">已选%1$s</string>
    <string name="send">发送(%1$s)</string>
    <string name="count">共%1$s个文件</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="about">About</string>
    <string name="others">Others</string>
    <string name="features">Features</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="desktop_environment">Desktop Environment</string>
    <string name="uninstall">Uninstall</string>
    <string name="support">Support Devs</string>
    <string name="desktop_title">Setup Desktop</string>
    <string name="ssh_title">Setup SSH</string>
    <string name="watch_ads">Watch Ads</string>
    <string name="donation">Donation</string>
    <string name="_continue">Continue</string>
    <string name="report">Report Error</string>
    <string name="ssh">SSH</string>
    <string name="patches">Patches</string>
    <string name="documentation">Documentation</string>
    <string name="step0">Please scroll down to see all steps if your device screen is small.</string>
    <string name="step1">Step 1 : Choose the distro you want to install, you can install multiple disto without conflict.</string>
    <string name="gui_step0">Please scroll down to see all steps if your device screen is small.\n\nWARNING: Only run this command inside the Linux System and not in Termux, otherwise it will not work!!!</string>
    <string name="gui_step1">Step 1 : \nPlease choose a distro to setup the Desktop Environment</string>
    <string name="ssh_step0">Please scroll down to see all steps if your device screen is small.\n\nWARNING: This ssh server could not be connected from outside by other device unless you run the Linux distro with Run with Root Permission feature. Also please run this command inside the Linux System and not in Termux, otherwise it will not work!!!</string>
    <string name="ssh_step1">Step 1 : Please choose a distro to setup OpenSSH Server</string>
    <string name="patch_step0">Please scroll down to see all steps if your device screen is small.</string>
    <string name="patch_step1">Step 1 : Please choose a Patches</string>
    <string name="uninstall_step1">Step 1 : Choose the distro you want to UNINSTALL, the distro will be removed without a trace and could not be recovered.</string>
    <string name="press_again_to_exit">Please press again to exit application</string>
    <string name="about_content">AnLinux\nis a open source project intent to bring the access of Linux to Android platform.\n\nThe icon of this application is taken from https://www.iconfinder.com , which is created by user : "Alpár-Etele Méder", you can reach the icon author by clicking "ICON AUTHOR" button below.\n\nIf you are looking for the source code used in this app, click the SOURCE CODE button.\n\nIf you are looking for scripts and rootfs used in this app, please click the CONTENT SOURCE button, they are license under GPLv2.\n\nThanks for using this apps.\n\n\nRegards, EXA Lab</string>
    <string name="icon_author">Icon Author</string>
    <string name="source_code">Source Code</string>
    <string name="content_source_code">Content Source</string>
    <string name="choose">Choose</string>
    <string name="copy">Copy</string>
    <string name="Launch">Launch</string>
    <string name="ubuntu_beginner">Ubuntu (Recommended for Beginner)</string>
    <string name="xfce4_recommended">Xfce4 (Recommended)</string>
    <string name="first_warning_content">First of all, thanks for downloading AnLinux, below are some important parts, please read carefully.\n\n1. To keep the distro small and light weight for easy install, most distro except Arch Linux and Kali Nethunter are minimal rootfs, which means most package are not installed yet, you could install them according to your need, and stop asking if the distro is faked.\n\n2. All distro are installed in this directory: /data/data/com.termux/files/home , please make sure that you have enough space before installing package and don\'t blame the app for occupying your device space because you are the one controlling it.\n\n3. Some distro may not available due to your device architecture.\n\n4. Currently, all device except mips based will work, if you encountered any error such as Proot signal 6, or function not implemented, just go to the Patches feature in app and apply SECCOMP path.\n\n\nThanks for reading, have a nice day :)</string>
    <string name="i_understand">I Understand</string>
    <string name="step2_cd">Step 2 : Please choose a distro first</string>
    <string name="step3_cd">Step 3 : Please choose a distro first</string>
    <string name="not_Supported">Not Supported</string>
    <string name="not_available">Not Available</string>
    <string name="same_arch_linux">Same as Arch Linux</string>
    <string name="termux_not_Installed">Termux is not installed, do you want to install it now ?</string>
    <string name="uninstall_step2">Step 2 : Copy the command to clipboard : %1$s \n\n This should fully remove %2$s from Termux.</string>
    <string name="uninstall_step3">Step 3 : Start Termux, paste and enter the command to uninstall distro. Important: you will need to run this command inside Termux shell and NOT IN Linux Shell.</string>
    <string name="details_type">Type</string>
    <string name="details_size">Size</string>
    <string name="details_permissions">Permissions</string>
    <string name="details_hidden">Hidden</string>
    <string name="details_lastmodified">Last Modified</string>
    <string name="address_text">...</string>
    <string name="general_preferences">General</string>
    <string name="title_screenlock_preference">Lock screen</string>
    <string name="summary_screenlock_preference">Keep screen active while the application is running</string>
    <string name="title_port_preference">Port</string>
    <string name="dialog_title_port_preference">Port</string>
    <string name="title_localhost_preference">Localhost</string>
    <string name="summary_localhost_preference">Only listen on 127.0.0.1</string>
    <string name="title_root_preference">Root</string>
    <string name="summary_root_preference">Require superuser permissions</string>
    <string name="title_autostart_preference">Autostart</string>
    <string name="summary_autostart_preference">Run when the application opens</string>
    <string name="title_shell_preference">Shell</string>
    <string name="dialog_title_shell_preference">Shell</string>
    <string name="title_username_preference">Username</string>
    <string name="dialog_title_username_preference">Username</string>
    <string name="title_password_preference">Password</string>
    <string name="dialog_title_password_preference">Password</string>
    <string name="localhost">false</string>
    <string name="root">false</string>
    <string name="autostart">false</string>
    <string name="screenlock">true</string>
    <string name="port">4200</string>
    <string name="shell">/system/bin/sh</string>
    <string name="username">android</string>
    <string name="password">changeme</string>
    <string name="请选择一种布局">请选择一种布局</string>
    <string name="官方布局">官方布局</string>
    <string name="轻触以一键切换到官方键盘布局">轻触以一键切换到官方键盘布局</string>
    <string name="魔改Termux布局">魔改Termux布局</string>
    <string name="轻触以一键切换到魔改键盘布局">轻触以一键切换到魔改键盘布局</string>
    <string name="导入底部布局配置文件">导入底部布局配置文件</string>
    <string name="配置文件请在群文件下载">[在 sdcard ->xinhao/config 下]\n[配置文件请在群文件下载]</string>
    <string name="导入右边键盘配置文件">导入右边键盘配置文件[不支持功能键,如 TAB ALT CTRL]</string>
    <string name="在主屏幕滑动右侧边缘滑动唤醒">[在 sdcard ->xinhao/config 下]\n[配置文件请在群文件下载]\n[在主屏幕,滑动右侧边缘滑动唤醒]</string>
    <string name="恢复默认右边键盘配置文件">恢复默认右边键盘配置文件</string>
    <string name="点击恢复默认的右边键盘文件">"点击恢复默认的右边键盘文件\n[在主屏幕,滑动右侧边缘滑动唤醒]"</string>
    <string name="ubuntu图形包linuxdeploy离线包">ubuntu图形包[linuxdeploy]离线包</string>
    <string name="一键安装ubuntu全能图形包">一键安装ubuntu全能图形包</string>
    <string name="manjaro系统包">manjaro系统包 提供:[洛克]</string>
    <string name="一键安装manjaro全能系统包">一键安装manjaro全能系统包</string>
    <string name="正在加载00dsfsdf">正在从服务器拉取数据,请稍后…</string>
    <string name="使用离线安装">使用离线安装</string>
    <string name="选择在线与本地">选择在线与本地</string>
</resources>