<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b2b2b"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="main.java.com.termux.activity.CustomActivity">


    <main.java.com.termux.utils.CustomTextView
        android:id="@+id/title_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/请选择一种布局"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <main.java.com.termux.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#fff" />
    <RelativeLayout
        android:id="@+id/guanfang_key"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/qinghua"
            android:padding="10dp">

            <main.java.com.termux.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/官方布局"
                android:textColor="#fff"
                android:textSize="16sp" />

            <main.java.com.termux.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/轻触以一键切换到官方键盘布局"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>


        <ImageView
            android:layout_width="40dp"
            android:id="@+id/qinghua"
            android:layout_centerVertical="true"
            android:src="@drawable/guangfang_key"
            android:layout_height="40dp" />

    </RelativeLayout>
    <main.java.com.termux.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#fff" />


    <main.java.com.termux.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#fff" />
    <RelativeLayout
        android:id="@+id/termux_key"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/mogai"
            android:padding="10dp">

            <main.java.com.termux.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/魔改Termux布局"
                android:textColor="#fff"
                android:textSize="16sp" />

            <main.java.com.termux.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/轻触以一键切换到魔改键盘布局"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>


        <ImageView
            android:layout_width="40dp"
            android:id="@+id/mogai"
            android:layout_centerVertical="true"
            android:src="@drawable/termux_key"
            android:layout_height="40dp" />

    </RelativeLayout>
    <main.java.com.termux.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#fff" />


    <main.java.com.termux.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#fff" />
    <RelativeLayout
        android:id="@+id/ziding_key"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/ziding"
            android:padding="10dp">

            <main.java.com.termux.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/导入底部布局配置文件"
                android:textColor="#fff"
                android:textSize="16sp" />

            <main.java.com.termux.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/配置文件请在群文件下载"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>


        <ImageView
            android:layout_width="40dp"
            android:id="@+id/ziding"
            android:layout_centerVertical="true"
            android:src="@drawable/ziding"
            android:layout_height="40dp" />

    </RelativeLayout>
    <main.java.com.termux.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#fff" />


    <main.java.com.termux.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#fff" />
    <RelativeLayout
        android:id="@+id/ziding_key_you"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/zidingyou"
            android:padding="10dp">

            <main.java.com.termux.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/导入右边键盘配置文件"
                android:textColor="#fff"
                android:textSize="16sp" />

            <main.java.com.termux.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/在主屏幕滑动右侧边缘滑动唤醒"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>


        <ImageView
            android:layout_width="40dp"
            android:id="@+id/zidingyou"
            android:layout_centerVertical="true"
            android:src="@drawable/youbian_key"
            android:layout_height="40dp" />

    </RelativeLayout>



    <main.java.com.termux.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#fff" />
    <RelativeLayout
        android:id="@+id/ziding_key_def"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/zidingyou_def"
            android:padding="10dp">

            <main.java.com.termux.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/恢复默认右边键盘配置文件"
                android:textColor="#fff"
                android:textSize="16sp" />

            <main.java.com.termux.utils.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/点击恢复默认的右边键盘文件"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>


        <ImageView
            android:layout_width="40dp"
            android:id="@+id/zidingyou_def"
            android:layout_centerVertical="true"
            android:src="@drawable/daoru_def"
            android:layout_height="40dp" />

    </RelativeLayout>

    <main.java.com.termux.utils.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#fff" />

</LinearLayout>
