<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:id="@+id/ycm"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:src="@drawable/tuxing_home_dis"
                    android:layout_height="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_height="match_parent">


                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:text="@string/ubuntu图形包linuxdeploy离线包"
                        android:textColor="#1BBC9B"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="14sp"
                        android:text="@string/一键安装ubuntu全能图形包"
                        android:textColor="#1BBC9B"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:id="@+id/ycm_manjaro"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="40dp"
                    android:src="@drawable/tuxing_home_dis"
                    android:layout_height="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_height="match_parent">


                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:text="@string/manjaro系统包"
                        android:textColor="#1BBC9B"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="match_parent"
                        android:textSize="14sp"
                        android:text="@string/一键安装manjaro全能系统包"
                        android:textColor="#1BBC9B"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>





        </LinearLayout>



    </ScrollView>



</RelativeLayout>
